# WorkBenchPro

./: .gitignore  01-cargo-toml.md  02-models.md  03-benchmarks.md  04-scoring.md  README.md  workbench-project-plan.md
workbench/: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  MARKETING.md  README.md  build.rs  vercel.json
workbench/.claude/: settings.local.json
workbench/.github/: pull_request_template.md
workbench/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
workbench/assets/: generate_icon.py
workbench/src/: app.rs  main.rs
workbench/src/benchmarks/: mod.rs  traits.rs
workbench/src/benchmarks/apps/: applaunch.rs  archive_ops.rs  cargo_build.rs  compression.rs  csharp_compile.rs  defender.rs  environment.rs  eventlog.rs  git_ops.rs  mod.rs  network.rs  powershell.rs  processes.rs  registry.rs  robocopy.rs  services.rs  symlinks.rs  taskscheduler.rs  windows_search.rs  wmic.rs
workbench/src/benchmarks/cpu/: mixed_workload.rs  mod.rs  multi_thread.rs  single_thread.rs  sustained_write.rs
workbench/src/benchmarks/disk/: file_enumeration.rs  large_file_read.rs  metadata_ops.rs  mod.rs  random_read.rs  traversal.rs
workbench/src/benchmarks/graphics/: mod.rs
workbench/src/cloud/: client.rs  mod.rs
workbench/src/core/: mod.rs  process.rs  recommendations.rs  runner.rs  system_check.rs  system_info.rs  timer.rs
workbench/src/export/: html.rs  json.rs  mod.rs
workbench/src/models/: mod.rs  report.rs  results.rs  system_info.rs
workbench/src/scoring/: calculator.rs  mod.rs  thresholds.rs
workbench/src/storage/: history.rs  mod.rs
workbench/src/ui/: mod.rs  theme.rs
workbench/web/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json
workbench/web/api/: sitemap.xml.js
workbench/web/public/: robots.txt  sitemap.xml
workbench/web/src/: App.jsx  api.js  index.css
(+36 files in other folders)
