[package]
name = "workbench-pro"
version = "1.0.0"
edition = "2021"
description = "WorkBench-Pro - Developer Workstation Benchmark"
license = "MIT"
repository = "https://github.com/johanmcad/workbench-pro"
homepage = "https://github.com/johanmcad/workbench-pro"
readme = "README.md"
keywords = ["benchmark", "performance", "developer", "workstation", "windows"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# UI - using wgpu renderer with glow fallback (DirectX/Vulkan/GL/OpenGL)
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "wgpu", "glow"] }
egui = "0.29"
egui_plot = "0.29"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# System info
sysinfo = "0.32"
raw-cpuid = "11"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Parallelism
rayon = "1.10"

# Random
rand = "0.8"

# HTTP client for cloud sync
reqwest = { version = "0.11", features = ["blocking", "json"] }
urlencoding = "2.1"

# Compression (CPU benchmark)
lz4_flex = "0.11"

# Hashing
sha2 = "0.10"

# Image (icon)
image = { version = "0.25", default-features = false, features = ["png"] }

# Windows
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_Graphics_Dxgi",
]}

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
